--- a/content/posts/2025-04-11 Audio.md.md
+++ b/content/posts/2025-04-11 Audio.md.md
@@ -4,4 +4,153 @@ date: 2025-04-11
 draft: false
 ---
 
-Audio Test
+---
+
+## Mikrofonarten
+
+**Kondensator-Mikrofone:**  
+Brauchen auf jeden Fall Strom, da die Membran durch eine Spannung (Phantomspeisung – meist 48 Volt) aufgeladen wird, um Schall aufzunehmen.
+
+**Dynamische Mikrofone:**  
+Nutzen ein Magnetfeld, um Spannung zu erzeugen – benötigen deshalb keinen Strom. Ideal für laute Quellen oder den robusten Live-Einsatz.
+
+---
+## **Charakteristiken von Mikrofonen**
+
+Mikrofone unterscheiden sich nicht nur in ihrer Bauart (z. B. Kondensator oder dynamisch), sondern auch in ihrer **Richtcharakteristik** – also darin, aus welchen Richtungen Schall aufgenommen wird.
+
+Die Richtcharakteristik beschreibt die Empfindlichkeit des Mikrofons in Bezug auf den Einfallswinkel des Schalls und bestimmt, aus welchen Richtungen ein Mikrofon Töne bevorzugt aufnimmt oder ausblendet.
+
+---
+
+### **Kugel (Omnidirektional, Druckempfänger)**
+
+- Nimmt Schall **gleichmäßig aus allen Richtungen** auf
+    
+- Kein bevorzugter Einfallswinkel – ideal für **Atmosphären**, **Raumklang** oder **Gruppenaufnahmen**
+    
+- Robust gegenüber Wind und Griffgeräuschen
+    
+- **Nachteil:** Keine Geräuschunterdrückung – alles wird eingefangen
+    
+
+---
+
+### **Niere (Cardioid)**
+
+- Höchste Empfindlichkeit nach vorne, schwächere Aufnahme von der Seite, kaum von hinten
+    
+- Gute Unterdrückung von Störgeräuschen im Hintergrund
+    
+- Vielseitig einsetzbar – ideal für **Interviews**, **Gesang**, **Live-Situationen**
+    
+- Standard bei vielen dynamischen Bühnenmikrofonen
+    
+
+---
+
+### **Superniere**
+
+- Engerer Aufnahmebereich als Niere
+    
+- Nimmt auch leicht von hinten auf, aber stärker fokussiert nach vorne
+    
+- Bessere Isolierung von Störquellen seitlich
+    
+- Häufig in **Reportage-Mikrofonen** und **Kamera-Richtmikrofonen** verwendet
+    
+
+---
+
+### **Hyperniere**
+
+- Noch fokussierter als Superniere
+    
+- Sehr gerichtete Aufnahme nach vorne, minimale seitliche Einflüsse
+    
+- Etwas mehr Empfindlichkeit für Schall von hinten als Superniere
+    
+- Ideal für **laute oder hallende Umgebungen**, z. B. auf Bühnen oder in Sportarenen
+    
+
+---
+
+### **Keule (Lobar)**
+
+- Sehr stark gerichtete Charakteristik, oft bei **Richtmikrofonen (Shotguns)**
+    
+- Nimmt fast nur Schall direkt von vorne auf, Unterdrückung von Seiten- und Hintergrundgeräuschen
+    
+- Perfekt für **Film**, **Fernsehen**, **Naturaufnahmen**, **Dreh mit Angel**
+    
+- Benötigt oft sorgfältiges Ausrichten, da seitliches Signal stark reduziert wird
+    
+
+---
+
+### **Acht (Bidirektional)**
+
+- Nimmt Schall von **vorne und hinten** gleich stark auf, **Seiten werden stark ausgeblendet**
+    
+- Ideal für **Zwei-Personen-Gespräche** mit einem Mikrofon (z. B. Interviews face-to-face)
+    
+- Wird oft bei **Studio-Großmembran-Kondensatoren** oder in **M/S-Stereo-Setups** verwendet
+
+---
+## Grundlagen Strom – einfach erklärt:
+
+- **Volt (V)** = Spannung → Der "Druck", der Elektronen durch ein System schiebt.
+    
+- **Ampere (A)** = Stromstärke → Wie viel Strom tatsächlich fließt.
+    
+- **Ohm (Ω)** = Widerstand → Wie stark der Stromfluss gebremst wird.
+    
+- **Watt (W)** = Leistung → Rechnet man aus:
+    
+    - **W = V × A**
+        
+
+Formeln:
+
+- **V = A × Ω**
+    
+- **A = V / Ω**
+    
+- **Ω = V / A**
+    
+
+---
+
+## Mikrofon- und Kopfhörerpegel
+
+Egal ob Kondensator oder dynamisch: Beide Mikrofonarten geben ein sehr leises Signal aus (typisch: 1–10 mV), das verstärkt werden muss. Ein Lautsprecher oder Kopfhörer braucht mindestens **0,1 V**, um hörbar zu sein.
+
+---
+
+## Kopfhörer und Ohm-Werte
+
+- **Niedriger Widerstand (16–50 Ohm):**  
+    Laut bei mobilen Geräten, aber oft schlechtere Klangqualität. Ziehen mehr Strom, dafür weniger Spannung nötig.
+    
+- **Hoher Widerstand (80–600+ Ohm):**  
+    Brauchen mehr Spannung (z. B. durch Verstärker), liefern aber oft besseren Klang. Die Membran bewegt sich präziser, was zu besserer Klangtreue führt. Außerdem haben sie längere, dünnere Spulen – das hilft bei der Wiedergabe hoher Frequenzen.
+    
+
+Wichtig:  
+Ein Kopfhörer mit hoher Ohm-Zahl klingt auf einem Handy oder Laptop ohne Verstärker **sehr leise oder gar nicht**. Deshalb nutzt man sie meist im Studio mit entsprechender Technik.
+
+Aber: **Die Ohm-Zahl allein sagt nichts über die Klangqualität aus.** Materialien, Verarbeitung und Treiberdesign sind genauso entscheidend.
+
+---
+## Mikrofonen
+
+
+| Modell       | Art         | Funktion         | Charakteristik | Merkmale                                                    |
+| ------------ | ----------- | ---------------- | -------------- | ----------------------------------------------------------- |
+| **SKM3072M** | Dynamisch   | Handmikrofon     | Hyperniere     | Eingebauter Sender (braucht daher trotzdem Strom)           |
+| **MKH416**   | Kondensator | Angelmikrofon    | Superniere     | Ideal für Film/TV, sehr gerichteter Klang                   |
+| **ME66**     | Kondensator | Coile / Angel    | Superniere     | Unterstützt Batterie für Phantomspeisung                    |
+| **MD421**    | Dynamisch   | Coile            | Superniere     | Ideal für sehr laute Umgebungen                             |
+| **ME102**    | Kondensator | Ansteckmikrofon  | Kugel          | Am besten für O-Ton in leisen Umgebungen mit viel Bewegung  |
+| **ME104**    | Kondensator | Ansteckmikrofon  | Niere          | Gut für O-Ton in lauten Umgebungen, wenn Person still steht |
+| **NTG1**     | Kondensator | Atmo / Richtrohr | Superniere     | Klassisches Atmo-Mikrofon für Film, braucht Phantomspeisung |
