Test commit from manual check

--- a/content/posts/2025-04-11 Audio.md.md
+++ b/content/posts/2025-04-11 Audio.md.md
@@ -82,11 +82,11 @@ Die Richtcharakteristik beschreibt die Empfindlichkeit des Mikrofons in Bezug au
 
 
 
-![richtcharakteristiken.png](/images/richtcharakteristiken.png)
+![[richtcharakteristiken.png]]
 
 
 
-![Richt2.png](/images/Richt2.png)
+![[Richt2.png]]
 
 
 ---
